fixed css for sheet music

--- a/src/App.css
+++ b/src/App.css
@@ -201,3 +201,25 @@ input[placeholder] {
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
+
+.prev-sheet-wrapper {
+  max-width: 5%;
+  width: 30%;
+  margin-bottom: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
+
+}
+
+.row {
+  display: grid;
+  grid-column: auto;
+  grid-row: auto;
+}
+
+.sheets-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+
+
+}
